--- a/index.html
+++ b/index.html
@@ -12,9 +12,33 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="row-cols-1">
+            <!-- 1 -->
+            <div id="e1" class="col my-5 p-3 border border-primary">
+                <h2 class="text-center pb-3">Exercise 1</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus temporibus maiores cum
+                    reiciendis? Nostrum
+                    voluptas cum commodi maiores obcaecati, dignissimos doloremque ab nulla, officiis, placeat
+                    repellendus error
+                    porro neque. Iste?
+                    Explicabo molestias temporibus dolores libero, aliquam perspiciatis vel dolore sequi quis qui
+                    excepturi neque
+                    sed voluptatibus odit laborum ipsam nulla fugit commodi. Pariatur earum beatae praesentium at unde
+                    eveniet ipsa!
+                    Dicta alias possimus repellendus officia delectus placeat itaque amet cumque nisi cupiditate
+                    quisquam voluptatem
+                    dolorum iure dignissimos molestiae enim blanditiis eligendi eius, sunt aspernatur neque! Vel,
+                    consequuntur?
+                    Aspernatur, dolor eum.</p>
+                <button id="geltona" class="btn btn-warning">Geltona</button>
+                <button id="zalia" class="btn btn-success">Žalia</button>
+                <button id="raudona" class="btn btn-danger">Raudona</button>
+            </div>
+        </div>
+    </div>
 
-    
-<!-- SCRIPT FILES -->
+    <!-- SCRIPT FILES -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/script.js"></script>
 </body>
