--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                 <button id="zalia" class="btn btn-success">Žalia</button>
                 <button id="raudona" class="btn btn-danger">Raudona</button>
             </div>
+            <!-- 2 -->
+            <div id="e2" class="col my-5 p-3 border border-warning">
+                <h2 class="text-center pb-3">Exercise 2</h2>
+                <div class="text-center">
+                    <button id="padidinti" class="btn btn-success">Padidinti</button>
+                    <button id="sumazinti" class="btn btn-danger">Sumažinti</button>
+                    <i id="first-ico" class="fab fa-html5 fa-5x d-block mt-5"></i>
+                </div>
+            </div>
         </div>
     </div>
 
