--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
                     <i id="first-ico" class="fab fa-html5 fa-5x d-block mt-5"></i>
                 </div>
             </div>
+             <!-- 3 -->
+             <div id="e3" class="col my-5 p-3 border border-success">
+                <h2 class="text-center pb-3">Exercise 3</h2>
+                <div class="text-center">
+                    <button id="spalvotas" class="btn btn-primary">Spalvotas</button>
+                    <button id="nespalvotas" class="btn btn-dark">Nespalvotas</button>
+                    <i id="second-ico" class="fab fa-html5 fa-5x d-block mt-5"></i>
+                </div>
+            </div>
         </div>
     </div>
 
