--- a/index.html
+++ b/index.html
@@ -44,13 +44,30 @@
                     <i id="first-ico" class="fab fa-html5 fa-5x d-block mt-5"></i>
                 </div>
             </div>
-             <!-- 3 -->
-             <div id="e3" class="col my-5 p-3 border border-success">
+            <!-- 3 -->
+            <div id="e3" class="col my-5 p-3 border border-success">
                 <h2 class="text-center pb-3">Exercise 3</h2>
                 <div class="text-center">
                     <button id="spalvotas" class="btn btn-primary">Spalvotas</button>
                     <button id="nespalvotas" class="btn btn-dark">Nespalvotas</button>
                     <i id="second-ico" class="fab fa-html5 fa-5x d-block mt-5"></i>
+                </div>
+            </div>
+            <!-- 4 -->
+            <div id="e4" class="col my-5 p-3 border border-danger">
+                <h2 id="e4" class="text-center pb-3">Exercise 4</h2>
+                <div class="text-center">
+                    <h3 id="pavadinimas" class="pavadinimas">Mano antraste</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae at illo porro saepe maxime aut
+                        doloremque voluptatem natus facilis consectetur repellat, laudantium, eligendi quibusdam
+                        voluptates quis libero nihil? Laboriosam, nisi.
+                        Veritatis, mollitia consequuntur eius quaerat nobis nulla dicta quibusdam quo deleniti natus
+                        fugiat, labore tempora ut. Commodi, error nemo! Accusamus deleniti quod maiores expedita illo
+                        harum odit non nihil iure!
+                        Iste, voluptates accusamus. Aut, distinctio nemo voluptatem nobis quam neque itaque aspernatur
+                        consequatur harum quod accusantium, expedita quis tempore molestias quos! Eligendi iste optio
+                        placeat similique illum tempore ducimus voluptate!</p>
+                    <button id="ok" class="btn btn-primary">OK</button>
                 </div>
             </div>
         </div>
