--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
                     <button id="ok" class="btn btn-primary">OK</button>
                 </div>
             </div>
+            <!-- 5 -->
+            <div id="e5" class="col my-5 p-3 border border-info">
+                <h2 class="text-center pb-3">Exercise 5</h2>
+                <div>
+                    <button id="komentaras" class="btn btn-success">Komentaras</button>
+                    <form class="border-top border-bottom border-success my-3 mx-5" action="#" id="formaKomentarui"
+                        method="GET">
+                        <div class="form-group">
+                            <label class="mt-3" for="name">Vardas:</label>
+                            <input class="form-control" type="text" id="name" name="name">
+                            <label class="mt-3" for="textarea">Komentaras:</label>
+                            <textarea class="form-control" name="textarea" id="textarea" cols="30"
+                                rows="10"></textarea>
+                            <input id="pateikti" class="form-control btn-warning mt-3" type="button" value="Pateikti">
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
