--- a/index.html
+++ b/index.html
@@ -81,11 +81,44 @@
                             <label class="mt-3" for="name">Vardas:</label>
                             <input class="form-control" type="text" id="name" name="name">
                             <label class="mt-3" for="textarea">Komentaras:</label>
-                            <textarea class="form-control" name="textarea" id="textarea" cols="30"
-                                rows="10"></textarea>
+                            <textarea class="form-control" name="textarea" id="textarea" cols="30" rows="10"></textarea>
                             <input id="pateikti" class="form-control btn-warning mt-3" type="button" value="Pateikti">
                         </div>
                     </form>
+                </div>
+            </div>
+            <!-- 6 -->
+            <div id="e6" class="col my-5 p-3 border border-warning">
+                <h2 class="text-center pb-3">Exercise 6</h2>
+                <div>
+                    <p class="alert-info p-3 rounded">Keisti paveikslėlio poziciją:</p>
+                    <button id="kaireje" class="btn btn-success">Kairėje</button>
+                    <button id="desineje" class="btn btn-secondary">Dešinėje</button>
+                    <button id="paslepti" class="btn btn-warning">Paslėpti</button>
+                    <button id="apacioje" class="btn btn-danger">Nukelti po pastraipomis</button>
+                    <button id="atstatyti" class="btn btn-dark">Atstatyti</button>
+                    <div id="flex-container" class="d-flex flex-column">
+                        <img id="code-image" class="mx-auto img-thumbnail mt-3"
+                            src="https://images.unsplash.com/photo-1468070454955-c5b6932bd08d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+                            alt="minified-code">
+                        <div class="text-left mt-3">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque in neque nihil sequi
+                                aspernatur delectus incidunt quam mollitia! Dolor quod, iusto repellat eveniet iure amet
+                                esse molestiae excepturi quas eos.Adipisci, repudiandae provident nobis expedita fugit
+                                iste nihil. Quae odio quo aspernatur omnis autem. A sapiente amet, deserunt corporis
+                                neque aliquam, aut ipsam minima nam provident necessitatibus numquam odio quia.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque in neque nihil sequi
+                                aspernatur delectus incidunt quam mollitia! Dolor quod, iusto repellat eveniet iure amet
+                                esse molestiae excepturi quas eos.Adipisci, repudiandae provident nobis expedita fugit
+                                iste nihil. Quae odio quo aspernatur omnis autem. A sapiente amet, deserunt corporis
+                                neque aliquam, aut ipsam minima nam provident necessitatibus numquam odio quia.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque in neque nihil sequi
+                                aspernatur delectus incidunt quam mollitia! Dolor quod, iusto repellat eveniet iure amet
+                                esse molestiae excepturi quas eos.Adipisci, repudiandae provident nobis expedita fugit
+                                iste nihil. Quae odio quo aspernatur omnis autem. A sapiente amet, deserunt corporis
+                                neque aliquam, aut ipsam minima nam provident necessitatibus numquam odio quia.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
