--- a/index.html
+++ b/index.html
@@ -4,140 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
-<body>
-    <!-- NAVIGATE EXERCISES -->
-    <h2 class="h5 text-center">Navigate exercises:</h2>
-    <nav id="navigation" class="text-center my-3">
-        <button class="btn btn-primary" onclick="scrollToElement('#e1')">1</button>
-        <button class="btn btn-primary" onclick="scrollToElement('#e2')">2</button>
-        <button class="btn btn-primary" onclick="scrollToElement('#e3')">3</button>
-        <button class="btn btn-primary" onclick="scrollToElement('#e4')">4</button>
-        <button class="btn btn-primary" onclick="scrollToElement('#e5')">5</button>
-        <button class="btn btn-primary" onclick="scrollToElement('#e6')">6</button>
-    </nav>
-    <div class="container">
-        <div class="row-cols-1">
-            <!-- 1 -->
-            <div id="e1" class="col my-5 p-3 border border-primary">
-                <h2 class="text-center pb-3">Exercise 1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus temporibus maiores cum
-                    reiciendis? Nostrum
-                    voluptas cum commodi maiores obcaecati, dignissimos doloremque ab nulla, officiis, placeat
-                    repellendus error
-                    porro neque. Iste?
-                    Explicabo molestias temporibus dolores libero, aliquam perspiciatis vel dolore sequi quis qui
-                    excepturi neque
-                    sed voluptatibus odit laborum ipsam nulla fugit commodi. Pariatur earum beatae praesentium at unde
-                    eveniet ipsa!
-                    Dicta alias possimus repellendus officia delectus placeat itaque amet cumque nisi cupiditate
-                    quisquam voluptatem
-                    dolorum iure dignissimos molestiae enim blanditiis eligendi eius, sunt aspernatur neque! Vel,
-                    consequuntur?
-                    Aspernatur, dolor eum.</p>
-                <button id="geltona" class="btn btn-warning">Geltona</button>
-                <button id="zalia" class="btn btn-success">Žalia</button>
-                <button id="raudona" class="btn btn-danger">Raudona</button>
-            </div>
-            <!-- 2 -->
-            <div id="e2" class="col my-5 p-3 border border-warning">
-                <h2 class="text-center pb-3">Exercise 2</h2>
-                <div class="text-center">
-                    <button id="padidinti" class="btn btn-success">Padidinti</button>
-                    <button id="sumazinti" class="btn btn-danger">Sumažinti</button>
-                    <i id="first-ico" class="fab fa-html5 fa-5x d-block mt-5"></i>
-                </div>
-            </div>
-            <!-- 3 -->
-            <div id="e3" class="col my-5 p-3 border border-success">
-                <h2 class="text-center pb-3">Exercise 3</h2>
-                <div class="text-center">
-                    <button id="spalvotas" class="btn btn-primary">Spalvotas</button>
-                    <button id="nespalvotas" class="btn btn-dark">Nespalvotas</button>
-                    <i id="second-ico" class="fab fa-html5 fa-5x d-block mt-5"></i>
-                </div>
-            </div>
-            <!-- 4 -->
-            <div id="e4" class="col my-5 p-3 border border-danger">
-                <h2 id="e4" class="text-center pb-3">Exercise 4</h2>
-                <div class="text-center">
-                    <h3 id="pavadinimas" class="pavadinimas">Mano antraste</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae at illo porro saepe maxime aut
-                        doloremque voluptatem natus facilis consectetur repellat, laudantium, eligendi quibusdam
-                        voluptates quis libero nihil? Laboriosam, nisi.
-                        Veritatis, mollitia consequuntur eius quaerat nobis nulla dicta quibusdam quo deleniti natus
-                        fugiat, labore tempora ut. Commodi, error nemo! Accusamus deleniti quod maiores expedita illo
-                        harum odit non nihil iure!
-                        Iste, voluptates accusamus. Aut, distinctio nemo voluptatem nobis quam neque itaque aspernatur
-                        consequatur harum quod accusantium, expedita quis tempore molestias quos! Eligendi iste optio
-                        placeat similique illum tempore ducimus voluptate!</p>
-                    <button id="ok" class="btn btn-primary">OK</button>
-                </div>
-            </div>
-            <!-- 5 -->
-            <div id="e5" class="col my-5 p-3 border border-info">
-                <h2 class="text-center pb-3">Exercise 5</h2>
-                <div>
-                    <button id="komentaras" class="btn btn-success">Komentaras</button>
-                    <form class="border-top border-bottom border-success my-3 mx-5" action="#" id="formaKomentarui"
-                        method="GET">
-                        <div class="form-group">
-                            <label class="mt-3" for="name">Vardas:</label>
-                            <input class="form-control" type="text" id="name" name="name">
-                            <label class="mt-3" for="textarea">Komentaras:</label>
-                            <textarea class="form-control" name="textarea" id="textarea" cols="30" rows="10"></textarea>
-                            <input id="pateikti" class="form-control btn-warning mt-3" type="button" value="Pateikti">
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <!-- 6 -->
-            <div id="e6" class="col my-5 p-3 border border-warning">
-                <h2 class="text-center pb-3">Exercise 6</h2>
-                <div>
-                    <p class="alert-info p-3 rounded">Keisti paveikslėlio poziciją:</p>
-                    <button id="kaireje" class="btn btn-success">Kairėje</button>
-                    <button id="desineje" class="btn btn-secondary">Dešinėje</button>
-                    <button id="paslepti" class="btn btn-warning">Paslėpti</button>
-                    <button id="apacioje" class="btn btn-danger">Nukelti po pastraipomis</button>
-                    <button id="atstatyti" class="btn btn-dark">Atstatyti</button>
-                    <div id="flex-container" class="d-flex flex-column">
-                        <img id="code-image" class="mx-auto img-thumbnail mt-3"
-                            src="https://images.unsplash.com/photo-1468070454955-c5b6932bd08d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-                            alt="minified-code">
-                        <div class="text-left mt-3">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque in neque nihil sequi
-                                aspernatur delectus incidunt quam mollitia! Dolor quod, iusto repellat eveniet iure amet
-                                esse molestiae excepturi quas eos.Adipisci, repudiandae provident nobis expedita fugit
-                                iste nihil. Quae odio quo aspernatur omnis autem. A sapiente amet, deserunt corporis
-                                neque aliquam, aut ipsam minima nam provident necessitatibus numquam odio quia.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque in neque nihil sequi
-                                aspernatur delectus incidunt quam mollitia! Dolor quod, iusto repellat eveniet iure amet
-                                esse molestiae excepturi quas eos.Adipisci, repudiandae provident nobis expedita fugit
-                                iste nihil. Quae odio quo aspernatur omnis autem. A sapiente amet, deserunt corporis
-                                neque aliquam, aut ipsam minima nam provident necessitatibus numquam odio quia.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque in neque nihil sequi
-                                aspernatur delectus incidunt quam mollitia! Dolor quod, iusto repellat eveniet iure amet
-                                esse molestiae excepturi quas eos.Adipisci, repudiandae provident nobis expedita fugit
-                                iste nihil. Quae odio quo aspernatur omnis autem. A sapiente amet, deserunt corporis
-                                neque aliquam, aut ipsam minima nam provident necessitatibus numquam odio quia.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<body class="container">
+    <div class="row">
+        <div class="col d-flex">
+            <a href="./1_pamoka/1pamoka.html">1 pamoka</a>
+            <a href="./2_pamoka/2pamoka.html">2 pamoka</a>
         </div>
     </div>
-    <!-- SCROLL TO TOP OF THE PAGE -->
-    <button class="btn btn-success rounded fixed-bottom m-3" onclick="scrollToElement('.h5')">Up</button>
-    <!-- SCRIPT FILES -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="js/script.js"></script>
+
 </body>
 
 </html>
