Pagražinta pamoku navigacija, atlikta 2 pamokos 4 uzduotis

--- a/1_pamoka/1pamoka.html
+++ b/1_pamoka/1pamoka.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <!-- BACK TO CLASSES LIST -->
+    <button class="btn btn-warning rounded fixed-top m-3" onclick="window.location='../';">Back</button>
     <!-- NAVIGATE EXERCISES -->
     <h2 class="h5 text-center">Navigate exercises:</h2>
     <nav id="navigation" class="text-center my-3">
