--- a/index.html
+++ b/index.html
@@ -4,19 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FOR PADDLE GAME -->
+    <!-- ALL CREDITS GOES TO Kit Jenson https://codepen.io/kitjenson/pen/dypvgad -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,500,700,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <!--  -->
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- FOR PADDLE GAME -->
+    <!-- ALL CREDITS GOES TO Kit Jenson https://codepen.io/kitjenson/pen/dypvgad -->
+    <link rel="stylesheet" href="css/style.css">
+    <!--  -->
     <title>Document</title>
 </head>
 
-<body class="container">
-    <div class="row">
-        <div class="col d-flex">
-            <a href="./1_pamoka/1pamoka.html">1 pamoka</a>
-            <a href="./2_pamoka/2pamoka.html">2 pamoka</a>
+<body>
+    <div class="d-flex flex-column fixed-top">
+        <div>
+            <a class="custom-link nav-link text-light d-inline-block" href="./1_pamoka/1pamoka.html">1 pamoka</a>
+        </div>
+        <div>
+            <a class="custom-link nav-link text-light d-inline-block" href="./2_pamoka/2pamoka.html">2 pamoka</a>
         </div>
     </div>
 
+    <!-- PADDLE GAME -->
+    <!-- ALL CREDITS GOES TO Kit Jenson https://codepen.io/kitjenson/pen/dypvgad -->
+    <div id='blur_bg'></div>
+    <div id='hits'>
+        <div id='left_hitbox'></div>
+        <div id='top_hitbox'></div>
+        <div id='right_hitbox'></div>
+        <div id='bottom_hitbox'></div>
+        <span>0</span>
+        <div id='high_score'>0</div>
+        <div id='how_to'>CLICK HERE TO START<br>a,d,◄,► to move paddle</div>
+    </div>
+    <div id='paddle'></div>
+    <div id='ball' class='bally'></div>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
