--- a/2_pamoka/2pamoka.html
+++ b/2_pamoka/2pamoka.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>2 pamoka</title>
 </head>
 
@@ -102,7 +102,7 @@
     </div>
 
     <!-- 6 -->
-    <div style="height: 50vh;" id="paveikslelis" class="row mb-5 p-3 border border-info">
+    <div id="paveikslelis" class="row mb-5 p-3 border border-info">
         <h3 class="col-12 mb-5">6 užduotis</h3>
         <div class="form-group ml-3">
             <label for="id_of_select">Pasirinkite kokio fono norėtumėte</label>
@@ -115,8 +115,31 @@
             </select>
         </div>
     </div>
-        <button id="btn" class="btn btn-success">Rodyti</button>
+
+    <!-- 7 -->
+    <div class="row mb-5 p-3 border border-info">
+        <h3 class="col-12 mb-5">7 užduotis</h3>
+        <div class="col-12 text-center mb-5">
+            <img id="main-picture"
+                src="https://images.unsplash.com/photo-1534275493774-1bd30c5769aa?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjR8fHBob3Rvc3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60"
+                alt="Shoes and photos" class="img-fluid mx-auto">
+            <label id="main-picture-alt" class="d-block" for="main-picture"></label>
+        </div>
+        <img id="picture-1"
+            src="https://images.unsplash.com/photo-1571023479098-1ed95127545e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+            alt="Birds at sunset" class="col-3">
+        <img id="picture-2"
+            src="https://images.unsplash.com/photo-1480365501497-199581be0e66?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80"
+            alt="Nikon in winter" class="col-3">
+        <img id="picture-3"
+            src="https://images.unsplash.com/photo-1527068589345-b736a7de9cc2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80"
+            alt="City" class="col-3 img-fluid">
+        <img id="picture-4"
+            src="https://images.unsplash.com/photo-1557487188-f3bf59148654?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80"
+            alt="Entrance to tunnel" class="col-3 img-fluid">
     </div>
+
+    <button id="btn" class="btn btn-success">Rodyti</button>
 
     <!-- BACK TO CLASSES LIST -->
     <button class="btn btn-warning rounded fixed-top m-3" onclick="window.location='../';">Back</button>
