--- a/2_pamoka/2pamoka.html
+++ b/2_pamoka/2pamoka.html
@@ -122,15 +122,15 @@
         <div class="col-12 text-center mb-5">
             <img id="main-picture"
                 src="https://images.unsplash.com/photo-1534275493774-1bd30c5769aa?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjR8fHBob3Rvc3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60"
-                alt="Shoes and photos" class="img-fluid mx-auto">
+                alt="Shoes and photos" class="img-fluid">
             <label id="main-picture-alt" class="d-block" for="main-picture"></label>
         </div>
         <img id="picture-1"
             src="https://images.unsplash.com/photo-1571023479098-1ed95127545e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-            alt="Birds at sunset" class="col-3">
+            alt="Birds at sunset" class="col-3 img-fluid">
         <img id="picture-2"
             src="https://images.unsplash.com/photo-1480365501497-199581be0e66?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80"
-            alt="Nikon in winter" class="col-3">
+            alt="Nikon in winter" class="col-3 img-fluid">
         <img id="picture-3"
             src="https://images.unsplash.com/photo-1527068589345-b736a7de9cc2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80"
             alt="City" class="col-3 img-fluid">
@@ -139,8 +139,9 @@
             alt="Entrance to tunnel" class="col-3 img-fluid">
     </div>
 
-    <button id="btn" class="btn btn-success">Rodyti</button>
+    <!-- 8 -->
 
+    
     <!-- BACK TO CLASSES LIST -->
     <button class="btn btn-warning rounded fixed-top m-3" onclick="window.location='../';">Back</button>
 
