Prideta padeka zaidimo kurejui

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- ALL CREDITS GOES TO Kit Jenson https://codepen.io/kitjenson/pen/dypvgad -->
     <link rel="stylesheet" href="css/style.css">
     <!--  -->
-    <title>Document</title>
+    <title>JS pamokos</title>
 </head>
 
 <body>
@@ -30,6 +30,10 @@
         <div>
             <a class="custom-link nav-link text-light d-inline-block" href="./2_pamoka/2pamoka.html">2 pamoka</a>
         </div>
+    </div>
+
+    <div class="fixed-bottom text-light">
+        <p class="d-inline-block mb-1 ml-1 custom-link">ALL CREDIT GOES TO Kit Jenson <a class="" target="_blank" href="https://codepen.io/kitjenson/pen/dypvgad">Paddle Game</a></p>
     </div>
 
     <!-- PADDLE GAME -->
