2 pamokos uzduotys prideta navigacija

--- a/1_pamoka/1pamoka.html
+++ b/1_pamoka/1pamoka.html
@@ -136,7 +136,7 @@
         </div>
     </div>
     <!-- SCROLL TO TOP OF THE PAGE -->
-    <button class="btn btn-success rounded fixed-bottom m-3" onclick="scrollToElement('.h5')">Up</button>
+    <button class="btn btn-success rounded fixed-bottom m-3" onclick="scrollToElement('body')">Up</button>
     <!-- SCRIPT FILES -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/script.js"></script>
