4 uzduotis - can add task with enter, 6 uzduotis - got rid of switch statement, 7 uzduotis - images are of consistent size

--- a/2_pamoka/2pamoka.html
+++ b/2_pamoka/2pamoka.html
@@ -122,10 +122,10 @@
             <label for="id_of_select">Pasirinkite kokio fono norėtumėte</label>
             <select class="form-control" id="id_of_select">
                 <option value="0" selected disabled>--Pasirinkite--</option>
-                <option value="1">Pavasaris</option>
-                <option value="2">Vasara</option>
-                <option value="3">Ruduo</option>
-                <option value="4">Žiema</option>
+                <option value="https://images.unsplash.com/photo-1462275646964-a0e3386b89fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1100&q=80">Pavasaris</option>
+                <option value="https://images.unsplash.com/photo-1487349384428-12b47aca925e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80">Vasara</option>
+                <option value="https://images.unsplash.com/photo-1517468832098-4843428b6d38?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">Ruduo</option>
+                <option value="https://images.unsplash.com/photo-1484313544071-4d67c88b99be?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80">Žiema</option>
             </select>
         </div>
     </div>
@@ -134,23 +134,31 @@
     <div id="e7" class="row mb-5 p-3 border border-info">
         <h3 class="col-12 mb-5">7 užduotis</h3>
         <div class="col-12 text-center mb-5">
-            <img id="main-picture"
-                src="https://images.unsplash.com/photo-1534275493774-1bd30c5769aa?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjR8fHBob3Rvc3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60"
-                alt="Shoes and photos" class="img-fluid">
+            <img width="200" id="main-picture"
+                src="https://images.unsplash.com/photo-1512675828443-4f454c42253a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80"
+                alt="Shoes" class="img-fluid">
             <label id="main-picture-alt" class="d-block" for="main-picture"></label>
         </div>
-        <img id="picture-1"
+        <div class="col-3 text-center">
+            <img width="100" id="picture-1"
             src="https://images.unsplash.com/photo-1571023479098-1ed95127545e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-            alt="Birds at sunset" class="col-3 img-fluid">
-        <img id="picture-2"
-            src="https://images.unsplash.com/photo-1480365501497-199581be0e66?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80"
-            alt="Nikon in winter" class="col-3 img-fluid">
-        <img id="picture-3"
+            alt="Birds at sunset" class="">
+        </div>
+        <div class="col-3 text-center">
+            <img width="100" id="picture-2"
+            src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80"
+            alt="Photographer" class="">
+        </div>
+        <div class="col-3 text-center">
+            <img width="100" id="picture-3"
             src="https://images.unsplash.com/photo-1527068589345-b736a7de9cc2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80"
-            alt="City" class="col-3 img-fluid">
-        <img id="picture-4"
+            alt="City" class="">
+        </div>
+        <div class="col-3 text-center">
+            <img width="100" id="picture-4"
             src="https://images.unsplash.com/photo-1557487188-f3bf59148654?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80"
-            alt="Entrance to tunnel" class="col-3 img-fluid">
+            alt="Entrance to tunnel" class="">
+        </div>
     </div>
 
     <!-- 8 -->
