--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <div>
             <a class="custom-link nav-link text-light d-inline-block" href="./2_pamoka/2pamoka.html">2 pamoka</a>
         </div>
+        <div>
+            <a class="custom-link nav-link text-light d-inline-block" href="./3_pamoka/3pamoka.html">3 pamoka</a>
+        </div>
     </div>
 
     <div class="fixed-bottom text-light">
