--- a/3_pamoka/3pamoka.html
+++ b/3_pamoka/3pamoka.html
@@ -15,13 +15,13 @@
     <!-- NAVIGATE EXERCISES -->
     <h2 class="h5 text-center">Navigate exercises:</h2>
     <nav id="navigation" class="text-center my-3">
-        <button class="btn btn-primary" onclick="scrollToElement('#e1')">1</button>
-        <button class="btn btn-primary" onclick="scrollToElement('#e2')">2</button>
-        <button class="btn btn-primary" onclick="scrollToElement('#e3')">3</button>
+        <button class="btn btn-primary exercise-nav">1</button>
+        <button class="btn btn-primary exercise-nav">2</button>
+        <button disabled class="btn btn-primary exercise-nav">3</button>
     </nav>
 
     <!-- 1 -->
-    <div id="e1" class="row mb-5 mt-3 p-3 border border-info">
+    <div id="exercise1" class="row mb-5 mt-3 p-3 border border-info">
         <div class="col mx-auto" style="width: 1000px;">
             <ul class="pl-0" id="friends_list">
 
@@ -30,7 +30,7 @@
     </div>
 
     <!-- 2 -->
-    <div id="e2" class="row mb-5 p-3 border border-info">
+    <div id="exercise2" class="row mb-5 p-3 border border-info d-none">
         <div class="col">
             <h2 class="mb-5">2 užduotis</h2>
             <form id="progress-bar-form" action="">
@@ -45,14 +45,11 @@
     </div>
 
     <!-- 3 -->
-    <div id="e3" class="row mb-5 p-3 border border-info">
+    <div id="exercise3" class="row mb-5 p-3 border border-info d-none">
         <div class="col">
 
         </div>
     </div>
-
-    <!-- SCROLL TO TOP OF THE PAGE -->
-    <button class="btn btn-success rounded fixed-bottom m-3" onclick="scrollToElement('body')">Up</button>
 
     <!-- BACK TO CLASSES LIST -->
     <button class="btn btn-warning rounded fixed-top m-3" onclick="window.location='../';">Back</button>
