--- a/3_pamoka/3pamoka.html
+++ b/3_pamoka/3pamoka.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>2 pamoka</title>
+    <title>3 pamoka</title>
 </head>
 
 <body class="container">
@@ -17,7 +17,7 @@
     <nav id="navigation" class="text-center my-3">
         <button class="btn btn-primary exercise-nav">1</button>
         <button class="btn btn-primary exercise-nav">2</button>
-        <button disabled class="btn btn-primary exercise-nav">3</button>
+        <button class="btn btn-primary exercise-nav">3</button>
     </nav>
 
     <!-- 1 -->
