--- a/3_pamoka/3pamoka.html
+++ b/3_pamoka/3pamoka.html
@@ -47,6 +47,7 @@
     <!-- 3 -->
     <div id="exercise3" class="row mb-5 p-3 border border-info d-none">
         <div class="col">
+            <h2 class="mb-5">3 užduotis</h2>
 
         </div>
     </div>
