--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <div>
             <a class="custom-link nav-link text-light d-inline-block" href="./3_pamoka/3pamoka.html">3 pamoka</a>
         </div>
+        <div>
+            <a class="custom-link nav-link text-light d-inline-block" href="./4_pamoka/4pamoka.html">4 pamoka</a>
+        </div>
     </div>
 
     <div class="fixed-bottom text-light">
