--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div>
             <a class="custom-link nav-link text-light d-inline-block" href="./4_pamoka/4pamoka.html">4 pamoka</a>
         </div>
+        <div>
+            <a class="custom-link nav-link text-light d-inline-block" href="./5_pamoka/index.html">5 pamoka</a>
+        </div>
     </div>
 
     <div class="fixed-bottom text-light">
