5 pamokos užduotys - pataisyta užduoties struktūra

--- a/5_pamoka/index.html
+++ b/5_pamoka/index.html
@@ -68,9 +68,9 @@
     <button class="btn btn-warning rounded fixed-top m-3" onclick="window.location='../';">Back</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="RandomUser.js"></script>
-    <!-- <script src="EKnygynas.js"></script> -->
-    <!-- <script src="Restoranas.js"></script> -->
+    <script src="js/RandomUser.js"></script>
+    <!-- <script src="js/EKnygynas.js"></script> -->
+    <!-- <script src="js/Restoranas.js"></script> -->
 </body>
 
 </html>
