--- a/1_pamoka/1pamoka.html
+++ b/1_pamoka/1pamoka.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- BACK TO CLASSES LIST -->
-    <button class="btn btn-warning rounded fixed-top m-3" onclick="window.location='../';">Back</button>
+    <button class="btn btn-warning rounded fixed-top m-3 btn-width" onclick="window.location='../';">Back</button>
     <!-- NAVIGATE EXERCISES -->
     <h2 class="h5 text-center">Navigate exercises:</h2>
     <nav id="navigation" class="text-center my-3">
@@ -136,7 +136,7 @@
         </div>
     </div>
     <!-- SCROLL TO TOP OF THE PAGE -->
-    <button class="btn btn-success rounded fixed-bottom m-3" onclick="scrollToElement('body')">Up</button>
+    <button class="btn btn-success rounded fixed-bottom m-3 btn-width" onclick="scrollToElement('body')">Up</button>
     <!-- SCRIPT FILES -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/script.js"></script>
