--- a/2_pamoka/2pamoka.html
+++ b/2_pamoka/2pamoka.html
@@ -122,10 +122,18 @@
             <label for="id_of_select">Pasirinkite kokio fono norėtumėte</label>
             <select class="form-control" id="id_of_select">
                 <option value="0" selected disabled>--Pasirinkite--</option>
-                <option value="https://images.unsplash.com/photo-1462275646964-a0e3386b89fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1100&q=80">Pavasaris</option>
-                <option value="https://images.unsplash.com/photo-1487349384428-12b47aca925e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80">Vasara</option>
-                <option value="https://images.unsplash.com/photo-1517468832098-4843428b6d38?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">Ruduo</option>
-                <option value="https://images.unsplash.com/photo-1484313544071-4d67c88b99be?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80">Žiema</option>
+                <option
+                    value="https://images.unsplash.com/photo-1462275646964-a0e3386b89fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1100&q=80">
+                    Pavasaris</option>
+                <option
+                    value="https://images.unsplash.com/photo-1487349384428-12b47aca925e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80">
+                    Vasara</option>
+                <option
+                    value="https://images.unsplash.com/photo-1517468832098-4843428b6d38?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
+                    Ruduo</option>
+                <option
+                    value="https://images.unsplash.com/photo-1484313544071-4d67c88b99be?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80">
+                    Žiema</option>
             </select>
         </div>
     </div>
@@ -141,23 +149,23 @@
         </div>
         <div class="col-3 text-center">
             <img width="100" id="picture-1"
-            src="https://images.unsplash.com/photo-1571023479098-1ed95127545e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-            alt="Birds at sunset" class="">
+                src="https://images.unsplash.com/photo-1571023479098-1ed95127545e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                alt="Birds at sunset" class="">
         </div>
         <div class="col-3 text-center">
             <img width="100" id="picture-2"
-            src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80"
-            alt="Photographer" class="">
+                src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80"
+                alt="Photographer" class="">
         </div>
         <div class="col-3 text-center">
             <img width="100" id="picture-3"
-            src="https://images.unsplash.com/photo-1527068589345-b736a7de9cc2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80"
-            alt="City" class="">
+                src="https://images.unsplash.com/photo-1527068589345-b736a7de9cc2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80"
+                alt="City" class="">
         </div>
         <div class="col-3 text-center">
             <img width="100" id="picture-4"
-            src="https://images.unsplash.com/photo-1557487188-f3bf59148654?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80"
-            alt="Entrance to tunnel" class="">
+                src="https://images.unsplash.com/photo-1557487188-f3bf59148654?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80"
+                alt="Entrance to tunnel" class="">
         </div>
     </div>
 
@@ -202,20 +210,20 @@
     </div>
 
     <!-- SCROLL TO TOP OF THE PAGE -->
-    <button class="btn btn-success rounded fixed-bottom m-3" onclick="scrollToElement('body')">Up</button>
+    <button class="btn btn-success rounded fixed-bottom m-3 btn-width" onclick="scrollToElement('body')">Up</button>
 
     <!-- BACK TO CLASSES LIST -->
-    <button class="btn btn-warning rounded fixed-top m-3" onclick="window.location='../';">Back</button>
+    <button class="btn btn-warning rounded fixed-top m-3 btn-width" onclick="window.location='../';">Back</button>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="./js/main.js"></script>
 </body>
 
