--- a/3_pamoka/3pamoka.html
+++ b/3_pamoka/3pamoka.html
@@ -35,11 +35,13 @@
             <h2 class="mb-5">2 užduotis</h2>
             <form id="progress-bar-form" action="">
                 <label id="progress-number-label" class="text-danger" for="progress-number"></label>
-                <input id="progress-number" class="form-control" name="progress-number" type="number" placeholder="Įveskite skaičių">
+                <input id="progress-number" class="form-control" name="progress-number" type="number"
+                    placeholder="Įveskite skaičių">
                 <input class="btn btn-primary mt-3 rounded" name="submit-number" type="submit" value="OK">
             </form>
             <div id="progress" class="progress my-5">
-                <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 0" aria-valuenow="0"
+                    aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
     </div>
@@ -53,17 +55,17 @@
     </div>
 
     <!-- BACK TO CLASSES LIST -->
-    <button class="btn btn-warning rounded fixed-top m-3" onclick="window.location='../';">Back</button>
+    <button class="btn btn-warning rounded btn-width fixed-top m-3" onclick="window.location='../';">Back</button>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="./js/main.js"></script>
 </body>
 
