--- a/4_pamoka/4pamoka.html
+++ b/4_pamoka/4pamoka.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>4 pamoka</title>
 </head>
 
@@ -27,7 +28,8 @@
                 <option value="rikiuoti-maziau">Rikiuoti nuo mažiausios</option>
             </select>
 
-            <input class="form-control btn btn-info w-50" id="submit" name="submit" type="submit" value="Atlikti veiksmą">
+            <input class="form-control btn btn-info w-50" id="submit" name="submit" type="submit"
+                value="Atlikti veiksmą">
         </form>
 
     </div>
@@ -42,7 +44,8 @@
         </div>
     </div>
     <!-- BACK TO CLASSES LIST -->
-    <button class="btn btn-warning rounded fixed-top m-3" onclick="window.location='../';">Back</button>
+    <button class="btn btn-warning rounded btn-width fixed-top m-3" onclick="window.location='../';">Back</button>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
