--- a/5_pamoka/index.html
+++ b/5_pamoka/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>5 pamoka</title>
 </head>
 
 <body>
 
     <!-- RANDOM USER CARD -->
-    <div class="page-content page-container" id="page-content">
+    <div class="page-content page-container mt-5" id="page-content">
         <div class="padding">
             <div class="row container d-flex justify-content-center">
                 <div class="col-xl-6 col-md-12">
@@ -21,9 +21,12 @@
                         <div class="row m-l-0 m-r-0">
                             <div class="col-sm-4 bg-c-lite-green user-profile">
                                 <div class="card-block text-center text-white">
-                                    <div class="m-b-25"> <img id="profile-pic" src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
+                                    <div class="m-b-25"> <img id="profile-pic"
+                                            src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius"
+                                            alt="User-Profile-Image"> </div>
                                     <h6 id="name" class="f-w-600">Hembo Tingor</h6>
-                                    <p id="age">Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                                    <p id="age">Web Designer</p> <i
+                                        class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
                                 </div>
                             </div>
                             <div class="col-sm-8">
@@ -51,9 +54,18 @@
                                         </div>
                                     </div>
                                     <ul class="social-link list-unstyled m-t-40 m-b-10">
-                                        <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="facebook" data-abc="true"><i class="mdi mdi-facebook feather icon-facebook facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="twitter" data-abc="true"><i class="mdi mdi-twitter feather icon-twitter twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="instagram" data-abc="true"><i class="mdi mdi-instagram feather icon-instagram instagram" aria-hidden="true"></i></a></li>
+                                        <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
+                                                data-original-title="facebook" data-abc="true"><i
+                                                    class="mdi mdi-facebook feather icon-facebook facebook"
+                                                    aria-hidden="true"></i></a></li>
+                                        <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
+                                                data-original-title="twitter" data-abc="true"><i
+                                                    class="mdi mdi-twitter feather icon-twitter twitter"
+                                                    aria-hidden="true"></i></a></li>
+                                        <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
+                                                data-original-title="instagram" data-abc="true"><i
+                                                    class="mdi mdi-instagram feather icon-instagram instagram"
+                                                    aria-hidden="true"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -65,7 +77,7 @@
     </div>
 
     <!-- BACK TO CLASSES LIST -->
-    <button class="btn btn-warning rounded fixed-top m-3" onclick="window.location='../';">Back</button>
+    <button class="btn btn-warning rounded btn-width fixed-top m-3" onclick="window.location='../';">Back</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/RandomUser.js"></script>
